# practice-reservation-system

./: .env  .gitignore  .pre-commit-config.yaml  README.md  drop_test_db.sh
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  error.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  request.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20230731190727_reservation.up.sql  20230731191434_reservation_trigger.up.sql  20230731191453_reservation_function.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
reservation/src/tests/: manager_change_status_tests.rs  manager_delete_tests.rs  manager_filter_tests.rs  manager_get_tests.rs  manager_query_tests.rs  manager_reserve_tests.rs  manager_update_note_tests.rs  mod.rs
rfcs/: 0001-core-reservation.md  Diary.md  error-notes.md  template.md
rfcs/mock_questions_notes/: architecture.md  why_protobuf.md
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs  main.rs  service.rs
service/src/tests/: grpc_service.rs  mod.rs  service_reserve_tests.rs
