[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
derive_builder = "0.12.0"
prost = "0.11.9"
prost-types = "0.11.9"
regex = "1.9.3"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "uuid", "postgres", "chrono"] }
thiserror = "1.0.44"
tonic = { version = "0.9.2", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.9.2"
