[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.72"
chrono = { version = "0.4.26", features = ["serde"] }
tokio = { version = "1.21.2", features = ["sync"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "uuid", "postgres", "chrono"] }
thiserror = "1.0.44"
futures = { version = "0.3.24", default-features = false }
tracing = "0.1.37"


[dev-dependencies]
prost-types = "0.11.9"
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
tokio = { version = "1.29.1", features = ["full"] }
