[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.75"
futures = { version = "0.3.28", default-features = false }
reservation = { version = "0.1.0", path = "../reservation" }
shellexpand = "3.1.0"
tokio = { version = "1.32.0", features = ["full"] }
tonic = { version = "0.9.2", features = ["gzip", "tls"] }

[dev-dependencies]
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres"] }
uuid = "1.4.0"
